@@ -17,7 +17,7 @@ package com.holonplatform.datastore.jdbc.test.suite;
 
 import static com.holonplatform.datastore.jdbc.test.data.TestDataModel.KEY;
 import static com.holonplatform.datastore.jdbc.test.data.TestDataModel.NAMED_TARGET;
-import static com.holonplatform.datastore.jdbc.test.data.TestDataModel.STR;
+import static com.holonplatform.datastore.jdbc.test.data.TestDataModel.STR1;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -33,7 +33,7 @@ public class AggregationFunctionsTest extends AbstractJdbcDatastoreSuiteTest {
 	@Test
 	public void testCount() {
 
-		long result = getDatastore().query().target(NAMED_TARGET).findOne(Count.create(STR)).orElse(-1L);
+		long result = getDatastore().query().target(NAMED_TARGET).findOne(Count.create(STR1)).orElse(-1L);
 		assertEquals(2, result);
 
 		result = getDatastore().query().target(NAMED_TARGET).findOne(KEY.count()).orElse(-1L);
@@ -45,25 +45,25 @@ public class AggregationFunctionsTest extends AbstractJdbcDatastoreSuiteTest {
 	public void testMinMax() {
 		Optional<Long> key = getDatastore().query().target(NAMED_TARGET).findOne(KEY.max());
 		assertTrue(key.isPresent());
-		assertEquals(new Long(2), key.get());
+		assertEquals(Long.valueOf(2), key.get());
 
 		key = getDatastore().query().target(NAMED_TARGET).findOne(KEY.min());
 		assertTrue(key.isPresent());
-		assertEquals(new Long(1), key.get());
+		assertEquals(Long.valueOf(1), key.get());
 	}
 
 	@Test
 	public void testSum() {
 		Optional<Long> sum = getDatastore().query().target(NAMED_TARGET).findOne(QueryFunction.sum(KEY));
 		assertTrue(sum.isPresent());
-		assertEquals(new Long(3), sum.get());
+		assertEquals(Long.valueOf(3), sum.get());
 	}
 
 	@Test
 	public void testAvg() {
 		Optional<Double> avg = getDatastore().query().target(NAMED_TARGET).findOne(KEY.avg());
 		assertTrue(avg.isPresent());
-		assertEquals(new Double(1.5), avg.get());
+		assertEquals(Double.valueOf(1.5), avg.get());
 	}
 
 }
